Add div for the upcoming SVGs and style sidebar
In the CSS file the items were arranged by means of flexbox, so there
is enough space between elements while being aligned in the left
section.

--- a/index.html
+++ b/index.html
@@ -33,21 +33,51 @@
 
 
         <div class="sidebar">
-            <div class="dashboard">Dashboard</div>
+            <div id="dashboard" class="dashboard">
+                <div class="icon">icon</div>
+                <div class="text">Dashboard</div>
+            </div>
 
             <div class="menu">
-                <div class="home">Home</div>
-                <div class="profile">Profile</div>
-                <div class="messages">Messages</div>
-                <div class="history">History</div>
-                <div class="tasks">Tasks</div>
-                <div class="communities">Communites</div>
+                <div class="home menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Home</div>
+                </div>
+                <div class="profile menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Profile</div>
+                </div>
+                <div class="messages menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">History</div>
+                </div>
+                <div class="history menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Messages</div>
+                </div>
+                <div class="tasks menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Tasks</div>
+                </div>
+                <div class="communities menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Communities</div>
+                </div>
             </div>
 
             <div class="settings">
-                <div class="settings">Settings</div>
-                <div class="support">Support</div>
-                <div class="privacy">Privacy</div>
+                <div class="setting menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Settings</div>
+                </div>
+                <div class="support menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Support</div>
+                </div>
+                <div class="privacy menu_sidebar">
+                    <div class="icon">icon</div>
+                    <div class="text">Privacy</div>
+                </div>
             </div>
 
         </div>
