--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 </head>
 <body>
     <div class="container">
-
-        <div class="search">
-            <input type="search">
-            <div class="bell">here hoes the bell</div>
-            <div class="icon">Here goes the icon</div>
-            <div class="name">Houser</div>
-        </div>
-
-        <div class="user">
-            <div class="icon">Here goes the icon</div>
-            <div class="username">
-                <div>Hi there,</div>
-                <div class="user">Houser(@Houser)</div>
+        <div class="top_part">
+            <div class="search1">
+                <div>
+                    <input type="search">
+                </div>
+                <div class="bell">here hoes the bell</div>
+                <div class="icon">Here goes the icon</div>
+                <div class="name">Houser</div>
             </div>
-            <div class="buttons">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+
+            <div class="user">
+                <div class="icon">Here goes the icon</div>
+                <div class="username">
+                    <div>Hi there,</div>
+                    <div class="user">Houser(@Houser)</div>
+                </div>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
-
 
 
         <div class="sidebar">
