Create search bar and style it
In the HTML the input was wrapped in the FORM element, in which the
action sends the information to the Google engine and the method is
get.

The button to submit the information has an image to give a better
appearance to the input. On the other hand, the form container is used
as the input visualization.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="container">
         <div class="top_part">
             <div class="search1">
-                <div>
-                    <input type="search">
-                </div>
+                <form action="https://www.google.com/search" method="get">
+                    <input type="text" name="q">
+                    <button type="submit"><img src="search.png"></button>
+                </form>
                 <div class="bell">here hoes the bell</div>
                 <div class="icon">Here goes the icon</div>
                 <div class="name">Houser</div>
