--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <div class="container">
         <div class="top_part">
-            <div class="search1">
+            <div class="search">
                 <form action="https://www.google.com/search" method="get">
                     <input type="text" name="q">
                     <button type="submit"><img src="search.png"></button>
                 </form>
-                <div class="bell">here hoes the bell</div>
-                <div class="icon">Here goes the icon</div>
-                <div class="name">Houser</div>
+                <div class="icons_header">
+                    <div class="bell">here hoes the bell</div>
+                    <div class="icon">Here goes the icon</div>
+                    <div class="name">Houser</div>
+                </div>
             </div>
 
             <div class="user">
