Create second level of the header
The HTML was changed in some sections to accomplish
this. In the HTML file the container for this level was inside the div
for the first level, thus it was taken out of there and placed in a
corresponding div so the container could exapand from the second
line row to the third.

In the CSS file the layout of this level was styled and arranged.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
                     <div class="name">Houser</div>
                 </div>
             </div>
-
+        </div>
+        <div class="top_part_second_part">
             <div class="user">
-                <div class="icon">Here goes the icon</div>
-                <div class="username">
-                    <div>Hi there,</div>
-                    <div class="user">Houser(@Houser)</div>
+                <div class="first_section">
+                    <div class="icon">Here goes the icon</div>
+                    <div class="username">
+                        <div>Hi there,</div>
+                        <div class="user">Houser(@Houser)</div>
+                    </div>
                 </div>
                 <div class="buttons">
                     <button>New</button>
