Create layout of the body
This layout should be responsive, which will be applied in the upcoming
changes. For the momento the general disposition was set.

--- a/index.html
+++ b/index.html
@@ -91,82 +91,83 @@
         </div>
 
         <div class="body">
-            <div class="project_container">
-                <div class="title_projects">Your projects</div>
-                <div class="projects">
-                    <div class="project1">
-                        <div class="title">Super Cool Project</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum justo eu euismod placerat. Morbi tempus maximus massa. Phasellus sed.</div>
-                    </div>
-                    <div class="project2">
-                        <div class="title">Less Cool Project</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac gravida mi, a auctor velit. Morbi pretium pharetra nisl, eget pulvinar enim faucibus sed. Cras cursus auctor felis non eleifend. Morbi neque turpis, pharetra euismod.</div>
-                    </div>
-                    <div class="project3">
-                        <div class="title">Impossible App</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum dictum massa imperdiet pretium. Nullam commodo aliquet sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet lacus eget odio malesuada eleifend. Aliquam lobortis porta porttitor. Donec imperdiet mi eget nisi congue, porttitor aliquet metus auctor. Suspendisse potenti.</div>
-                    </div>
-                    <div class="project4">
-                        <div class="title">Easy Peasy App</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis feugiat ex vitae elementum. Nullam congue porta enim, a dictum.</div>
-                    </div>
-                    <div class="project5">
-                        <div class="title">Add Blocker</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
-                    </div>
-                    <div class="project6">
-                        <div class="title">Money Maker</div>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="left_sidebar">
-
-                <div class="announcements_first">
-                    <div class="title_announcements">Announcements</div>
-                    <div class="body_announcements">
-                        <div>
-                            <div class="title"> Site Maintenance</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et nulla lorem. Nam pharetra.</div>
+            <div class="body1">
+                <div class="project_container">
+                    <div class="title_projects">Your projects</div>
+                    <div class="projects">
+                        <div class="project1">
+                            <div class="title">Super Cool Project</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum justo eu euismod placerat. Morbi tempus maximus massa. Phasellus sed.</div>
                         </div>
-                        <div>
-                            <div class="title">Community Share Day</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
+                        <div class="project2">
+                            <div class="title">Less Cool Project</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac gravida mi, a auctor velit. Morbi pretium pharetra nisl, eget pulvinar enim faucibus sed. Cras cursus auctor felis non eleifend. Morbi neque turpis, pharetra euismod.</div>
+                        </div>
+                        <div class="project3">
+                            <div class="title">Impossible App</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum dictum massa imperdiet pretium. Nullam commodo aliquet sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet lacus eget odio malesuada eleifend. Aliquam lobortis porta porttitor. Donec imperdiet mi eget nisi congue, porttitor aliquet metus auctor. Suspendisse potenti.</div>
+                        </div>
+                        <div class="project4">
+                            <div class="title">Easy Peasy App</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis feugiat ex vitae elementum. Nullam congue porta enim, a dictum.</div>
+                        </div>
+                        <div class="project5">
+                            <div class="title">Add Blocker</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                        </div>
+                        <div class="project6">
+                            <div class="title">Money Maker</div>
+                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
                         </div>
                     </div>
                 </div>
 
-                <div class="trending">
-                    <div class="title_trending">Trendings</div>
-                     <div class="body_trending">
-                        <div>
-                            <div class="icon">Here goes icon</div>
-                            <div class="userbox">
-                                <div class="user">@Rocco</div>
-                                <div class="text">Pamtas</div>
+                <div class="left_sidebar">
+                    <div class="announcements_first">
+                        <div class="title_announcements">Announcements</div>
+                        <div class="body_announcements">
+                            <div>
+                                <div class="title"> Site Maintenance</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et nulla lorem. Nam pharetra.</div>
+                            </div>
+                            <div>
+                                <div class="title">Community Share Day</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
                             </div>
                         </div>
-                        <div>
-                            <div class="icon">Here goes icon</div>
-                            <div class="userbox">
-                                <div class="user">@Quemso</div>
-                                <div class="text">Super Cool Project</div>
+                    </div>
+
+                    <div class="trending">
+                        <div class="title_trending">Trendings</div>
+                        <div class="body_trending">
+                            <div>
+                                <div class="icon">Here goes icon</div>
+                                <div class="userbox">
+                                    <div class="user">@Rocco</div>
+                                    <div class="text">Pamtas</div>
+                                </div>
                             </div>
-                        </div>
-                        <div>
-                            <div class="icon">Here goes icon</div>
-                            <div class="userbox">
-                                <div class="user">@Luckys</div>
-                                <div class="text">No Traffic Maker</div>
+                            <div>
+                                <div class="icon">Here goes icon</div>
+                                <div class="userbox">
+                                    <div class="user">@Quemso</div>
+                                    <div class="text">Super Cool Project</div>
+                                </div>
                             </div>
-                        </div>
-                        <div>
-                            <div class="icon">Here goes icon</div>
-                            <div class="userbox">
-                                <div class="user">@Houser</div>
-                                <div class="text">World Peace Builder</div>
+                            <div>
+                                <div class="icon">Here goes icon</div>
+                                <div class="userbox">
+                                    <div class="user">@Luckys</div>
+                                    <div class="text">No Traffic Maker</div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="icon">Here goes icon</div>
+                                <div class="userbox">
+                                    <div class="user">@Houser</div>
+                                    <div class="text">World Peace Builder</div>
+                                </div>
                             </div>
                         </div>
                     </div>
