Give padding and background to element in container body

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                             <div>
                                 <div class="title">Community Share Day</div>
                                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
+                            </div>
+                            <div>
+                                <div class="title">Updated Privacy Policy</div>
                                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
                             </div>
                         </div>
