--- a/index.html
+++ b/index.html
@@ -95,29 +95,35 @@
                 <div class="project_container">
                     <div class="title_projects">Your projects</div>
                     <div class="projects">
-                        <div class="project1">
+                        <div class="card">
                             <div class="title">Super Cool Project</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum justo eu euismod placerat. Morbi tempus maximus massa. Phasellus sed.</div>
+                            <div class="options">Here goes options</div>
                         </div>
-                        <div class="project2">
+                        <div class="card">
                             <div class="title">Less Cool Project</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac gravida mi, a auctor velit. Morbi pretium pharetra nisl, eget pulvinar enim faucibus sed. Cras cursus auctor felis non eleifend. Morbi neque turpis, pharetra euismod.</div>
+                            <div class="options">Here goes options</div>
                         </div>
-                        <div class="project3">
+                        <div class="card">
                             <div class="title">Impossible App</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum dictum massa imperdiet pretium. Nullam commodo aliquet sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet lacus eget odio malesuada eleifend. Aliquam lobortis porta porttitor. Donec imperdiet mi eget nisi congue, porttitor aliquet metus auctor. Suspendisse potenti.</div>
+                            <div class="options">Here goes options</div>
                         </div>
-                        <div class="project4">
+                        <div class="card">
                             <div class="title">Easy Peasy App</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis feugiat ex vitae elementum. Nullam congue porta enim, a dictum.</div>
+                            <div class="options">Here goes options</div>
                         </div>
-                        <div class="project5">
+                        <div class="card">
                             <div class="title">Add Blocker</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            <div class="options">Here goes options</div>
                         </div>
-                        <div class="project6">
+                        <div class="card">
                             <div class="title">Money Maker</div>
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            <div class="options">Here goes options</div>
                         </div>
                     </div>
                 </div>
