Wrapp title and text of cards and position options
In the HTML file the title and the text of the cards were wrapped, so
when in the CSS file those containers were defined as flex with a
direction column, the title and the text remain toghether but the
options can be placed at the bottom by setting space-between.

--- a/index.html
+++ b/index.html
@@ -96,33 +96,45 @@
                     <div class="title_projects">Your projects</div>
                     <div class="projects">
                         <div class="card">
-                            <div class="title">Super Cool Project</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum justo eu euismod placerat. Morbi tempus maximus massa. Phasellus sed.</div>
+                            <div class="title_text">
+                                <div class="title">Super Cool Project</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum justo eu euismod placerat. Morbi tempus maximus massa. Phasellus sed.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                         <div class="card">
-                            <div class="title">Less Cool Project</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac gravida mi, a auctor velit. Morbi pretium pharetra nisl, eget pulvinar enim faucibus sed. Cras cursus auctor felis non eleifend. Morbi neque turpis, pharetra euismod.</div>
+                            <div class="title_text">
+                                <div class="title">Less Cool Project</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac gravida mi, a auctor velit. Morbi pretium pharetra nisl, eget pulvinar enim faucibus sed. Cras cursus auctor felis non eleifend. Morbi neque turpis, pharetra euismod.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                         <div class="card">
-                            <div class="title">Impossible App</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum dictum massa imperdiet pretium. Nullam commodo aliquet sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet lacus eget odio malesuada eleifend. Aliquam lobortis porta porttitor. Donec imperdiet mi eget nisi congue, porttitor aliquet metus auctor. Suspendisse potenti.</div>
+                            <div class="title_text">
+                                <div class="title">Impossible App</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum dictum massa imperdiet pretium. Nullam commodo aliquet sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet lacus eget odio malesuada eleifend. Aliquam lobortis porta porttitor. Donec imperdiet mi eget nisi congue, porttitor aliquet metus auctor. Suspendisse potenti.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                         <div class="card">
-                            <div class="title">Easy Peasy App</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis feugiat ex vitae elementum. Nullam congue porta enim, a dictum.</div>
+                            <div class="title_text">
+                                <div class="title">Easy Peasy App</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis feugiat ex vitae elementum. Nullam congue porta enim, a dictum.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                         <div class="card">
-                            <div class="title">Add Blocker</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            <div class="title_text">
+                                <div class="title">Add Blocker</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                         <div class="card">
-                            <div class="title">Money Maker</div>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            <div class="title_text">
+                                <div class="title">Money Maker</div>
+                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat, turpis a dictum vehicula, leo urna interdum diam, id malesuada purus nisi ut.</div>
+                            </div>
                             <div class="options">Here goes options</div>
                         </div>
                     </div>
