Style left sidebar
This sidebar was given some padding. The second element of the first
card of the sidebar was targeted by means of placing a class to it
in the HTML file, thus a top and bottom border was added to give a
better separation between elements.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <div class="title"> Site Maintenance</div>
                                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et nulla lorem. Nam pharetra.</div>
                             </div>
-                            <div>
+                            <div class="second">
                                 <div class="title">Community Share Day</div>
                                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada.</div>
                             </div>
