--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </svg>
                     </div>
                     <div class="icon">
-                        <img src="Spiderman.svg">
+                        <img src="Spiderman.png">
                     </div>
                     <div class="name">Houser</div>
                 </div>
@@ -32,11 +32,11 @@
             <div class="user">
                 <div class="first_section">
                     <div class="icon">
-                        <img src="Spiderman.svg">
+                        <img src="Spiderman.png">
                     </div>
                     <div class="username">
                         <div>Hi there,</div>
-                        <div class="user">Houser(@Houser)</div>
+                        <div class="user">Houser (@Houser)</div>
                     </div>
                 </div>
                 <div class="buttons">
@@ -262,29 +262,37 @@
                     <div class="trending">
                         <div class="title_trending">Trendings</div>
                         <div class="body_trending">
-                            <div>
-                                <div class="icon">Here goes icon</div>
+                            <div class="trending_element">
+                                <div class="icon">
+                                    <svg style="enable-background:new 0 0 48 48;" version="1.1" viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icons"><g><polygon points="39.53465,25.08735 37.65605,24.42815 33.09565,26.62565 36.95155,30.39815     38.64945,30.39815   " style="fill:#DB2A2A;"/><polygon points="9.97565,24.42815 8.46535,25.28415 9.35065,30.39815 11.04855,30.39815 10.23215,24.42815       " style="fill:#DB2A2A;"/><polygon points="27.21595,24.58125 32.55055,38.72695 32.56415,38.73205 32.56415,38.72695     36.08415,35.95045 36.95155,30.39815 37.65605,24.42815   " style="fill:#F43735;"/><polygon points="9.99185,24.54155 10.62915,29.04825 11.91595,35.95045 15.03625,38.72695     22.65625,26.24855   " style="fill:#F43735;"/><polygon points="32.97535,24.44735 14.61365,24.52265 15.03625,38.72695 15.02415,39.30105     16.82205,41.21865 30.76615,41.21865 32.56415,39.61415 32.56415,38.73205 32.55055,38.72695   " style="fill:#DB2A2A;"/><path d="M18.68715,7.56275c-3.6442,1.1189-7.9771,3.8254-8.9367,10.3529c0-0.01,0.01-0.01,0.02-0.02    c0.18-0.17,1.8-1.53,5.9-1.61c3.2374-0.074,4.294,1.3978,4.6253,2.1665l0.9613-1.3004c0,0,2.5412-3.3858,2.0056-6.0558    C22.90705,9.32345,19.83755,8.08945,18.68715,7.56275z" style="fill:#F43735;"/><path d="M29.21465,7.73065l0.188-0.1282c-1.5188-0.4816-3.291-0.7824-5.3722-0.8168    c0,0-2.4556-0.1095-5.3433,0.7771c2.8832,1.3202,2.5699,9.589,2.5699,9.589l-0.9613,1.3004    c0.1159,0.269,0.1447,0.4535,0.1447,0.4535l6.78-0.09c0,0-0.0283-0.2724-0.002-0.6705l-0.6475-0.9934    c0,0,2.7322-2.1539,3.1784-4.6428C30.09455,10.58355,27.93855,8.28105,29.21465,7.73065z" style="fill:#DB2A2A;"/><path d="M29.40265,7.60245l-0.188,0.1282c-1.1599,0.5002-1.8156,2.0844-2.1846,3.8145    c-0.5619,2.6341-0.4591,5.6066-0.4591,5.6066l0.6475,0.9934c0.0777-1.1701,0.6332-3.4354,3.812-3.1295    c4.14,0.41,7.09,4.27,7.27,4.51c0.01,0.01,0.01,0.01,0.01,0.01s0,0,0-0.01v-0.01    C38.30195,19.03095,38.02755,10.33745,29.40265,7.60245z" style="fill:#F43735;"/><path d="M38.36045,20.00565l-0.13,0.85l-1.1334,8.3098c-1.59,0.7799-2.7366,2.0902-3.3766,3.4602    c-1.14,2.45-1.58,5.31-1.58,5.31l-1.59,0.71l-2.77-0.09l-1.5-0.95l-5.84-0.21l-1.19,1.01l-2.15,0.22l-1.53-1.53    c-0.1-2.03-1.06-3.36-1.51-4.55c-0.84-2.19-1.91-3.07-1.91-3.07l-1.52-0.43l-1.15-8.12l-0.13-0.92c0,0,0-0.17,0.03-0.45    c0.04-0.38,0.13-0.97,0.37-1.64c0-0.01,0.01-0.01,0.02-0.02c0.5-1.43,1.65-3.21,4.24-4.07c4.71-1.57,6.49,0.94,7.25,3.33h5.31    c2.75-8.44,11.01-1.83,11.74,2.36v0.01c0,0.01,0,0.01,0,0.01C38.34045,19.69565,38.36045,19.85565,38.36045,20.00565z" style="fill:#FFDD4D;"/><path d="M13.31135,23.83375c0,0,4.7841,0.8338,7.1321,0.7475l-1.262,1.6673    c0,0-3.0525-0.0863-5.5766-0.6037L13.31135,23.83375z" style="fill:#FFFFFF;"/><path d="M34.34795,23.83375c0,0-4.784,0.8338-7.132,0.7475l1.262,1.6673c0,0,3.0525-0.0863,5.5765-0.6037    L34.34795,23.83375z" style="fill:#FFFFFF;"/><path d="M38.31045,19.53565c0,0,0,0,0-0.01h-0.01l-2.71,3.55l-1.33,0.39c-0.22,0.04-4.79,0.82-7.03,0.74    c-0.01,0-0.01,0.01-0.02,0.01l-6.77-0.01c-0.01,0-0.01,0-0.01,0c-2.24,0.08-6.81-0.7-7.03-0.74l-1.33-0.39l-2.69-3.52    c-0.03,0.28-0.03,0.45-0.03,0.45l0.13,0.92l2.07,2.7c0.04,0.07,0.11,0.11,0.19,0.14l1.24,0.36l0.25,1.58    c0.03,0.15,0.15,0.27,0.3,0.31c2.53,0.51,5.51,0.6,5.64,0.61h0.01c0.12,0,0.23-0.06,0.3-0.15l1.15-1.52l6.4,0.01l1.15,1.51    c0.07,0.09,0.18,0.15,0.3,0.15c0,0,0,0,0.01,0c0.12-0.01,3.11-0.1,5.64-0.61c0.15-0.04,0.27-0.16,0.29-0.31l0.26-1.58l1.24-0.36    c0.08-0.03,0.14-0.07,0.19-0.14l2.12-2.77l0.13-0.85C38.36045,19.85565,38.34045,19.69565,38.31045,19.53565z M19.00045,25.86565    c-0.68-0.03-3.02-0.15-5.07-0.54l-0.17-1.04c1.16,0.19,3.96,0.62,5.93,0.67L19.00045,25.86565z M33.73045,25.32565    c-2.05,0.39-4.39,0.51-5.07,0.54l-0.69-0.91c1.97-0.05,4.77-0.48,5.92-0.67L33.73045,25.32565z" style="fill:#DB2A2A;"/><path d="M14.05735,32.55185c0,0,0.8386,2.3016,0.9336,4.7785l1.8865,1.8876v-2.504    C16.87745,36.71395,15.23905,34.03995,14.05735,32.55185z" style="fill:#EFBC3F;"/><polygon points="28.73545,35.07665 18.97945,35.07665 16.87745,36.71395 16.87745,39.21795     16.87745,39.21805 19.24095,39.21805 20.57285,38.06005 25.89155,38.06045 27.21595,39.37765 30.55185,39.37765     30.59065,36.56395   " style="fill:#FFD24A;"/><path d="M30.59065,36.56395l-0.0388,2.8137l2.075-1.4227c0,0,0.4281-3.1656,1.0959-5.3335    L30.59065,36.56395z" style="fill:#EFBC3F;"/></g></g></svg>
+                                </div>
                                 <div class="userbox">
                                     <div class="user">@Rocco</div>
                                     <div class="text">Pamtas</div>
                                 </div>
                             </div>
-                            <div>
-                                <div class="icon">Here goes icon</div>
+                            <div class="trending_element">
+                                <div class="icon">
+                                    <svg height="48px" id="Layer_1" style="enable-background:new 0 0 63.991 48;" version="1.1" viewBox="0 0 63.991 48" width="63.991px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Superman_Logo"><g><path d="M63.869,10.466L52.841,0.049L52.788,0h-0.07H11.274h-0.071L11.15,0.049L0.123,10.466L0,10.582    l0.109,0.128l31.75,37.13L31.996,48l0.137-0.16l31.75-37.13l0.108-0.128L63.869,10.466z M43.606,3.656h2.313h0.148l-0.031,0.146    L45.948,4.21l-0.13,0.404l-0.154,0.361l-0.03,0.072l-0.031,0.07l-0.03,0.063L45.54,5.25l-0.033,0.063l-0.033,0.063l-0.001,0.002    l-0.031,0.059l-0.032,0.057l-0.031,0.053h-0.001l-0.018,0.031v0.001l-0.019,0.028v0.002l-0.083,0.137l-0.108-0.119l-1.631-1.771    l-0.184-0.199H43.606z M12.441,6.999L11.447,8.22l-0.969,1.377l-0.772,1.475l-0.169,0.321l-0.158,0.322l-0.145,0.322l-0.146,0.324    l-0.136,0.331l-0.125,0.337l-0.128,0.347l-0.115,0.349l-0.1,0.351l-0.02,0.071l-0.02,0.068l-0.018,0.067l-0.019,0.069L8.392,14.42    l-0.017,0.069l-0.001,0.002l-0.056,0.225L8.167,14.54L5.04,10.899l-0.073-0.084l0.082-0.078l7.51-7.048l0.034-0.032h0.048h2.622    h0.295l-0.212,0.204l-0.884,0.85l-1.023,1.065L12.441,6.999z M38.725,34.448l-6.638,7.727l-0.091,0.106l-0.091-0.106l-6.972-8.116    l-0.235-0.273l0.353,0.08l0.735,0.169l0.841,0.168l0.925,0.145l0.926,0.143l1.015,0.121l1.086,0.074l1.726,0.119l1.9,0.002    l1.997-0.205l0.388-0.04l0.394-0.048l0.398-0.057l0.399-0.057l0.399-0.066l0.399-0.072l0.033-0.007l0.331-0.061L38.725,34.448z     M45.038,25.864l-0.007,0.04l-0.009,0.04l-0.01,0.041l-0.012,0.04l-0.013,0.039h-0.001l-0.005,0.015v0.001l-0.084,0.229    l-0.154,0.231l-0.204,0.225l-0.038,0.042l-0.041,0.043l-0.044,0.045l-0.044,0.043l-0.044,0.043l-0.045,0.04l-0.002,0.002    l-0.002,0.003c-0.626,0.573-1.516,1.075-2.31,1.383l-0.153,0.061l-0.152,0.053l-0.146,0.045l-0.147,0.045l-0.141,0.036    L41.1,28.676l-0.003,0.001l-0.759,0.157l-0.787,0.098l-0.802,0.058l-0.797,0.058l-0.814,0.019h-0.819h-0.829l-0.83-0.021    l-0.818-0.021l-0.503-0.012l-0.5-0.014L32.35,28.99l-0.259-0.005l-0.256-0.002l-0.252-0.002h-0.05l-0.034-0.033l-0.271-0.271    l-0.224-0.234l-0.211-0.223l-0.002-0.001c-0.633-0.666-1.175-1.235-1.825-1.642l-0.646-0.404l-0.764-0.25l-1.088-0.035    l-0.313-0.01l-0.324-0.015l-0.324-0.016l-0.067-0.003h-0.001l-0.616-0.027l-0.617-0.029l-0.611-0.002l-0.611-0.001l-0.613,0.024    l-0.61,0.08l-0.388,0.05l-0.479,0.222l-0.477,0.327l-0.095,0.065l-0.094,0.068l-0.093,0.071l-0.092,0.072l-0.093,0.075    l-0.091,0.08l-0.006,0.005l-0.088,0.078l-0.088,0.08l-0.085,0.082l-0.051,0.05l-0.051,0.052l-0.001,0.001l-0.001,0.002v-0.002    l-0.056,0.059l-0.058,0.06l-0.091,0.097l-0.087-0.102l-4.987-5.806l-0.261-0.303l0.386,0.113l0.016,0.003    c2.29,0.625,4.702,0.978,7.159,1.193l2.467,0.215l2.501,0.079l2.471,0.077l1.092,0.033l1.085,0.034l1.071,0.047l1.078,0.046    l1.066,0.058l1.045,0.08l0.018,0.001c0.234,0.019,0.474,0.035,0.715,0.051l0.26,0.018l0.253,0.016l0.252,0.016l1.102,0.068    l1.159,0.074l1.134,0.143l1.118,0.143l1.088,0.211l0.975,0.346v-0.001l0.092,0.034l0.063,0.022v0.001    c0.468,0.176,0.806,0.368,1.035,0.57l0.049,0.042l0.043,0.042l0.037,0.042l0.039,0.042l0.034,0.045l0.031,0.044l0.001,0.001    l0.001,0.002c0.133,0.191,0.179,0.395,0.158,0.601L45.038,25.864z M58.952,10.899l-6.662,7.757l-0.102,0.118l-0.088-0.129    l-0.163-0.234l-0.161-0.219l-0.154-0.191h-0.001l-0.027-0.034l-0.029-0.036l-0.032-0.038l-0.028-0.034l-0.029-0.034l-0.029-0.033    l-0.001-0.001c-0.036-0.041-0.074-0.084-0.114-0.125l-0.021-0.022l-0.02-0.021l-0.001-0.001l-0.001-0.001l-0.037-0.039    l-0.038-0.036l-0.036-0.033l-0.019-0.018l-0.018-0.017v0.001l-0.001-0.001l-0.001-0.001l-0.002-0.001l-1.813-1.598l-2.051-1.17    l-2.207-0.771l-0.429-0.15l-0.436-0.135l-0.44-0.12c-0.436-0.119-0.879-0.224-1.326-0.314h-0.002l-0.008-0.003h-0.004    l-0.001-0.001l-0.452-0.091l-0.455-0.076l-0.455-0.062l-0.074-0.009l-0.088-0.013L40.79,12.95l-0.099-0.012l-0.089-0.011    l-0.08-0.008l-0.007-0.001l-0.451-0.05l-0.457-0.036l-0.46-0.021l-0.095-0.005l-0.092-0.004L38.873,12.8l-0.094-0.004    l-0.092-0.002l-0.089-0.003L38.57,12.79v0.001h-0.001l-0.002-0.001h-0.032l-0.752-0.018l-0.752-0.004l-0.752,0.003l-0.752,0.002    l-0.754,0.01l-0.754,0.009h-0.059l-2.286,0.027l-2.285,0.025l-2.281-0.158h-0.001H27.1l-1.16-0.082l-1.812-0.278l-1.589-0.565    l-0.311-0.111l-0.303-0.121l-0.288-0.134l-0.289-0.134l-0.273-0.146l-0.252-0.157l-0.011-0.008h-0.001l-0.347-0.218l-0.306-0.241    l-0.243-0.267l-0.049-0.052l-0.045-0.055l-0.043-0.053c-0.044-0.055-0.084-0.11-0.121-0.166h-0.001h-0.001l0.001-0.001    c-0.187-0.274-0.31-0.577-0.353-0.907l-0.009-0.063l-0.005-0.066l-0.002-0.065V8.794c-0.002-0.066-0.001-0.135,0.003-0.201V8.592    l0.001-0.01l0.008-0.11h0.003c0.035-0.292,0.13-0.602,0.29-0.932l0.035-0.071l0.039-0.073L19.71,7.32l0.042-0.075l0.046-0.076    l0.048-0.075l0.008-0.013l0.751-1.174l1.271-0.828l1.551-0.551l0.297-0.105l0.311-0.096l0.322-0.088l0.319-0.086l0.328-0.076    l0.334-0.067l0.004-0.001c0.334-0.066,0.678-0.124,1.029-0.172l0.059-0.009l0.067-0.009l0.081-0.011l0.088-0.011l0.069-0.01    l0.053-0.006l0.006-0.001l0.354-0.041l0.358-0.033l0.358-0.024h0.001l0.209-0.014h0.001l0.21-0.012h0.001l0.014-0.001h0.006h0.001    h0.12h2.265V3.65l0.126,0.006l1.523,0.072l1.488,0.192l1.325,0.28l0.259,0.056l0.253,0.057l0.245,0.062l0.24,0.06l0.239,0.064    l0.235,0.066l0.012,0.004l0.119,0.035c0.189,0.057,0.371,0.115,0.544,0.174h0.001l0.121,0.042h0.001l0.12,0.043l0.003,0.001    l0.203,0.072l0.195,0.076l0.185,0.078l0.001,0.001l0.105,0.045l0.001,0.001l0.011,0.004L38.25,5.14l0.104,0.049l0.6,0.27    l0.553,0.325l0.502,0.384l0.504,0.387l0.454,0.445l0.401,0.512l0.402,0.516l0.352,0.582l0.297,0.657l0.296,0.655l0.242,0.729    l0.186,0.81l0.032,0.139h0.143h10.716h0.18v-0.178V6.574V6.298l0.202,0.19l4.527,4.249l0.083,0.078L58.952,10.899z" style="fill:#ED7161;"/></g></g><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/></svg>
+                                </div>
                                 <div class="userbox">
                                     <div class="user">@Quemso</div>
                                     <div class="text">Super Cool Project</div>
                                 </div>
                             </div>
-                            <div>
-                                <div class="icon">Here goes icon</div>
+                            <div class="trending_element">
+                                <div class="icon">
+                                    <img src="Batman.png">
+                                </div>
                                 <div class="userbox">
                                     <div class="user">@Luckys</div>
                                     <div class="text">No Traffic Maker</div>
                                 </div>
                             </div>
-                            <div>
-                                <div class="icon">Here goes icon</div>
+                            <div class="trending_element">
+                                <div class="icon spiderman">
+                                    <img src="Spiderman.png">
+                                </div>
                                 <div class="userbox">
                                     <div class="user">@Houser</div>
                                     <div class="text">World Peace Builder</div>
